--- a/test/fixtures/versions.yml
+++ b/test/fixtures/versions.yml
@@ -27,9 +27,9 @@
 #  event        :string(255)      not null
 #  id           :integer          not null, primary key
 #  item_changes :text
-#  item_id      :integer          not null
+#  item_id      :integer
 #  item_object  :text
-#  item_type    :string(255)      not null
+#  item_type    :string(255)
 #
 #
 # == Fixture: versions
@@ -37,7 +37,6 @@
 # versions_001:
 #   creator: users_001
 #   event: "Lorem ipsum"
-#   item: items_001 (Model)
 #
 ---
 versions_001:
