--- a/test/fixtures/production_support_markers.yml
+++ b/test/fixtures/production_support_markers.yml
@@ -21,28 +21,30 @@
 #
 # == Table: production_support_markers
 #
-#  aim                 :string(255)      not null
-#  boolean_value       :boolean          not null
-#  choice_value        :string(255)
-#  created_at          :datetime         not null
-#  creator_id          :integer
-#  decimal_value       :decimal(19, 4)
-#  derivative          :string(255)
-#  geometry_value      :spatial({:srid=>
-#  id                  :integer          not null, primary key
-#  indicator_datatype  :string(255)      not null
-#  indicator_name      :string(255)      not null
-#  integer_value       :integer
-#  lock_version        :integer          default(0), not null
-#  measure_value_unit  :string(255)
-#  measure_value_value :decimal(19, 4)
-#  multi_polygon_value :spatial({:srid=>
-#  point_value         :spatial({:srid=>
-#  string_value        :text
-#  subject             :string(255)
-#  support_id          :integer          not null
-#  updated_at          :datetime         not null
-#  updater_id          :integer
+#  absolute_measure_value_unit  :string(255)
+#  absolute_measure_value_value :decimal(19, 4)
+#  aim                          :string(255)      not null
+#  boolean_value                :boolean          not null
+#  choice_value                 :string(255)
+#  created_at                   :datetime         not null
+#  creator_id                   :integer
+#  decimal_value                :decimal(19, 4)
+#  derivative                   :string(255)
+#  geometry_value               :spatial({:srid=>
+#  id                           :integer          not null, primary key
+#  indicator_datatype           :string(255)      not null
+#  indicator_name               :string(255)      not null
+#  integer_value                :integer
+#  lock_version                 :integer          default(0), not null
+#  measure_value_unit           :string(255)
+#  measure_value_value          :decimal(19, 4)
+#  multi_polygon_value          :spatial({:srid=>
+#  point_value                  :spatial({:srid=>
+#  string_value                 :text
+#  subject                      :string(255)
+#  support_id                   :integer          not null
+#  updated_at                   :datetime         not null
+#  updater_id                   :integer
 #
 #
 # == Fixture: production_support_markers
