--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -30,6 +30,7 @@
 #  default_storage_id    :integer
 #  derivative_of         :string(120)
 #  description           :text
+#  extjuncted            :boolean          not null
 #  financial_asset_id    :integer
 #  id                    :integer          not null, primary key
 #  identification_number :string(255)
@@ -65,6 +66,7 @@
 # products_001:
 #   category: categories_001
 #   creator: users_001
+#   extjuncted: true
 #   name: "Lorem ipsum"
 #   nature: natures_001
 #   number: "Lorem ipsum"
