Fixes NetService/Identifier config for tests

--- a/test/fixtures/net_services.yml
+++ b/test/fixtures/net_services.yml
@@ -46,6 +46,6 @@ net_services_001:
 
 net_services_002:
   creator: users_001
-  reference_name: 'telepac'
+  reference_name: 'lilco'
   updater: users_001
 
