--- a/config/rights.yml
+++ b/config/rights.yml
@@ -29,6 +29,7 @@
 # - "backend/analytic_distributions#show"
 # - "backend/analytic_distributions#unroll"
 # - "backend/analytic_distributions#update"
+# - "backend/animal_foods#index"
 # - "backend/animal_groups#create"
 # - "backend/animal_groups#destroy"
 # - "backend/animal_groups#edit"
@@ -61,6 +62,7 @@
 # - "backend/animal_medicines#show"
 # - "backend/animal_medicines#unroll"
 # - "backend/animal_medicines#update"
+# - "backend/animal_products#index"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -523,6 +525,7 @@
 # - "backend/people#show"
 # - "backend/people#unroll"
 # - "backend/people#update"
+# - "backend/plant_fertilizers#index"
 # - "backend/plant_medicines#create"
 # - "backend/plant_medicines#destroy"
 # - "backend/plant_medicines#edit"
@@ -544,6 +547,8 @@
 # - "backend/plant_medicines#show"
 # - "backend/plant_medicines#unroll"
 # - "backend/plant_medicines#update"
+# - "backend/plant_products#index"
+# - "backend/plant_seedlings#index"
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
