Generalizes WGS84 in spatial columns

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -49,13 +49,13 @@
 # - "backend/animal_medicines#list_carrier_linkages"
 # - "backend/animal_medicines#list_contained_products"
 # - "backend/animal_medicines#list_groups"
-# - "backend/animal_medicines#list_indicators"
 # - "backend/animal_medicines#list_intervention_casts"
 # - "backend/animal_medicines#list_issues"
 # - "backend/animal_medicines#list_markers"
 # - "backend/animal_medicines#list_members"
 # - "backend/animal_medicines#list_places"
 # - "backend/animal_medicines#list_reading_tasks"
+# - "backend/animal_medicines#list_readings"
 # - "backend/animal_medicines#new"
 # - "backend/animal_medicines#picture"
 # - "backend/animal_medicines#show"
@@ -72,13 +72,13 @@
 # - "backend/animals#list_children"
 # - "backend/animals#list_contained_products"
 # - "backend/animals#list_groups"
-# - "backend/animals#list_indicators"
 # - "backend/animals#list_intervention_casts"
 # - "backend/animals#list_issues"
 # - "backend/animals#list_markers"
 # - "backend/animals#list_members"
 # - "backend/animals#list_places"
 # - "backend/animals#list_reading_tasks"
+# - "backend/animals#list_readings"
 # - "backend/animals#new"
 # - "backend/animals#picture"
 # - "backend/animals#show"
@@ -94,13 +94,13 @@
 # - "backend/building_divisions#list_carrier_linkages"
 # - "backend/building_divisions#list_contained_products"
 # - "backend/building_divisions#list_groups"
-# - "backend/building_divisions#list_indicators"
 # - "backend/building_divisions#list_intervention_casts"
 # - "backend/building_divisions#list_issues"
 # - "backend/building_divisions#list_markers"
 # - "backend/building_divisions#list_members"
 # - "backend/building_divisions#list_places"
 # - "backend/building_divisions#list_reading_tasks"
+# - "backend/building_divisions#list_readings"
 # - "backend/building_divisions#new"
 # - "backend/building_divisions#picture"
 # - "backend/building_divisions#show"
@@ -111,13 +111,13 @@
 # - "backend/buildings#list_contained_products"
 # - "backend/buildings#list_divisions"
 # - "backend/buildings#list_groups"
-# - "backend/buildings#list_indicators"
 # - "backend/buildings#list_intervention_casts"
 # - "backend/buildings#list_issues"
 # - "backend/buildings#list_markers"
 # - "backend/buildings#list_members"
 # - "backend/buildings#list_places"
 # - "backend/buildings#list_reading_tasks"
+# - "backend/buildings#list_readings"
 # - "backend/buildings#picture"
 # - "backend/buildings#unroll"
 # - "backend/calculators#index"
@@ -185,7 +185,6 @@
 # - "backend/cultivable_zones#list_carrier_linkages"
 # - "backend/cultivable_zones#list_contained_products"
 # - "backend/cultivable_zones#list_groups"
-# - "backend/cultivable_zones#list_indicators"
 # - "backend/cultivable_zones#list_intervention_casts"
 # - "backend/cultivable_zones#list_issues"
 # - "backend/cultivable_zones#list_markers"
@@ -193,6 +192,7 @@
 # - "backend/cultivable_zones#list_places"
 # - "backend/cultivable_zones#list_productions"
 # - "backend/cultivable_zones#list_reading_tasks"
+# - "backend/cultivable_zones#list_readings"
 # - "backend/cultivable_zones#new"
 # - "backend/cultivable_zones#picture"
 # - "backend/cultivable_zones#show"
@@ -226,13 +226,13 @@
 # - "backend/equipments#list_carrier_linkages"
 # - "backend/equipments#list_contained_products"
 # - "backend/equipments#list_groups"
-# - "backend/equipments#list_indicators"
 # - "backend/equipments#list_intervention_casts"
 # - "backend/equipments#list_issues"
 # - "backend/equipments#list_markers"
 # - "backend/equipments#list_members"
 # - "backend/equipments#list_places"
 # - "backend/equipments#list_reading_tasks"
+# - "backend/equipments#list_readings"
 # - "backend/equipments#picture"
 # - "backend/equipments#unroll"
 # - "backend/establishments#unroll"
@@ -333,13 +333,13 @@
 # - "backend/land_parcel_clusters#list_carrier_linkages"
 # - "backend/land_parcel_clusters#list_contained_products"
 # - "backend/land_parcel_clusters#list_groups"
-# - "backend/land_parcel_clusters#list_indicators"
 # - "backend/land_parcel_clusters#list_intervention_casts"
 # - "backend/land_parcel_clusters#list_issues"
 # - "backend/land_parcel_clusters#list_markers"
 # - "backend/land_parcel_clusters#list_members"
 # - "backend/land_parcel_clusters#list_places"
 # - "backend/land_parcel_clusters#list_reading_tasks"
+# - "backend/land_parcel_clusters#list_readings"
 # - "backend/land_parcel_clusters#new"
 # - "backend/land_parcel_clusters#picture"
 # - "backend/land_parcel_clusters#show"
@@ -354,13 +354,13 @@
 # - "backend/land_parcel_groups#list_carrier_linkages"
 # - "backend/land_parcel_groups#list_contained_products"
 # - "backend/land_parcel_groups#list_groups"
-# - "backend/land_parcel_groups#list_indicators"
 # - "backend/land_parcel_groups#list_intervention_casts"
 # - "backend/land_parcel_groups#list_issues"
 # - "backend/land_parcel_groups#list_markers"
 # - "backend/land_parcel_groups#list_members"
 # - "backend/land_parcel_groups#list_places"
 # - "backend/land_parcel_groups#list_reading_tasks"
+# - "backend/land_parcel_groups#list_readings"
 # - "backend/land_parcel_groups#new"
 # - "backend/land_parcel_groups#picture"
 # - "backend/land_parcel_groups#show"
@@ -370,13 +370,13 @@
 # - "backend/land_parcels#list_carrier_linkages"
 # - "backend/land_parcels#list_contained_products"
 # - "backend/land_parcels#list_groups"
-# - "backend/land_parcels#list_indicators"
 # - "backend/land_parcels#list_intervention_casts"
 # - "backend/land_parcels#list_issues"
 # - "backend/land_parcels#list_markers"
 # - "backend/land_parcels#list_members"
 # - "backend/land_parcels#list_places"
 # - "backend/land_parcels#list_reading_tasks"
+# - "backend/land_parcels#list_readings"
 # - "backend/land_parcels#picture"
 # - "backend/land_parcels#unroll"
 # - "backend/legal_entities#autocomplete_for_origin"
@@ -413,13 +413,13 @@
 # - "backend/matters#list_carrier_linkages"
 # - "backend/matters#list_contained_products"
 # - "backend/matters#list_groups"
-# - "backend/matters#list_indicators"
 # - "backend/matters#list_intervention_casts"
 # - "backend/matters#list_issues"
 # - "backend/matters#list_markers"
 # - "backend/matters#list_members"
 # - "backend/matters#list_places"
 # - "backend/matters#list_reading_tasks"
+# - "backend/matters#list_readings"
 # - "backend/matters#new"
 # - "backend/matters#picture"
 # - "backend/matters#show"
@@ -434,13 +434,13 @@
 # - "backend/medicines#list_carrier_linkages"
 # - "backend/medicines#list_contained_products"
 # - "backend/medicines#list_groups"
-# - "backend/medicines#list_indicators"
 # - "backend/medicines#list_intervention_casts"
 # - "backend/medicines#list_issues"
 # - "backend/medicines#list_markers"
 # - "backend/medicines#list_members"
 # - "backend/medicines#list_places"
 # - "backend/medicines#list_reading_tasks"
+# - "backend/medicines#list_readings"
 # - "backend/medicines#new"
 # - "backend/medicines#picture"
 # - "backend/medicines#show"
@@ -455,13 +455,13 @@
 # - "backend/mineral_matters#list_carrier_linkages"
 # - "backend/mineral_matters#list_contained_products"
 # - "backend/mineral_matters#list_groups"
-# - "backend/mineral_matters#list_indicators"
 # - "backend/mineral_matters#list_intervention_casts"
 # - "backend/mineral_matters#list_issues"
 # - "backend/mineral_matters#list_markers"
 # - "backend/mineral_matters#list_members"
 # - "backend/mineral_matters#list_places"
 # - "backend/mineral_matters#list_reading_tasks"
+# - "backend/mineral_matters#list_readings"
 # - "backend/mineral_matters#new"
 # - "backend/mineral_matters#picture"
 # - "backend/mineral_matters#show"
@@ -485,13 +485,13 @@
 # - "backend/organic_matters#list_carrier_linkages"
 # - "backend/organic_matters#list_contained_products"
 # - "backend/organic_matters#list_groups"
-# - "backend/organic_matters#list_indicators"
 # - "backend/organic_matters#list_intervention_casts"
 # - "backend/organic_matters#list_issues"
 # - "backend/organic_matters#list_markers"
 # - "backend/organic_matters#list_members"
 # - "backend/organic_matters#list_places"
 # - "backend/organic_matters#list_reading_tasks"
+# - "backend/organic_matters#list_readings"
 # - "backend/organic_matters#new"
 # - "backend/organic_matters#picture"
 # - "backend/organic_matters#show"
@@ -534,13 +534,13 @@
 # - "backend/plant_medicines#list_carrier_linkages"
 # - "backend/plant_medicines#list_contained_products"
 # - "backend/plant_medicines#list_groups"
-# - "backend/plant_medicines#list_indicators"
 # - "backend/plant_medicines#list_intervention_casts"
 # - "backend/plant_medicines#list_issues"
 # - "backend/plant_medicines#list_markers"
 # - "backend/plant_medicines#list_members"
 # - "backend/plant_medicines#list_places"
 # - "backend/plant_medicines#list_reading_tasks"
+# - "backend/plant_medicines#list_readings"
 # - "backend/plant_medicines#new"
 # - "backend/plant_medicines#picture"
 # - "backend/plant_medicines#show"
@@ -557,13 +557,13 @@
 # - "backend/plants#list_carrier_linkages"
 # - "backend/plants#list_contained_products"
 # - "backend/plants#list_groups"
-# - "backend/plants#list_indicators"
 # - "backend/plants#list_intervention_casts"
 # - "backend/plants#list_issues"
 # - "backend/plants#list_markers"
 # - "backend/plants#list_members"
 # - "backend/plants#list_places"
 # - "backend/plants#list_reading_tasks"
+# - "backend/plants#list_readings"
 # - "backend/plants#new"
 # - "backend/plants#picture"
 # - "backend/plants#show"
@@ -589,13 +589,13 @@
 # - "backend/product_groups#list_carrier_linkages"
 # - "backend/product_groups#list_contained_products"
 # - "backend/product_groups#list_groups"
-# - "backend/product_groups#list_indicators"
 # - "backend/product_groups#list_intervention_casts"
 # - "backend/product_groups#list_issues"
 # - "backend/product_groups#list_markers"
 # - "backend/product_groups#list_members"
 # - "backend/product_groups#list_places"
 # - "backend/product_groups#list_reading_tasks"
+# - "backend/product_groups#list_readings"
 # - "backend/product_groups#new"
 # - "backend/product_groups#picture"
 # - "backend/product_groups#show"
@@ -676,13 +676,13 @@
 # - "backend/products#list_carrier_linkages"
 # - "backend/products#list_contained_products"
 # - "backend/products#list_groups"
-# - "backend/products#list_indicators"
 # - "backend/products#list_intervention_casts"
 # - "backend/products#list_issues"
 # - "backend/products#list_markers"
 # - "backend/products#list_members"
 # - "backend/products#list_places"
 # - "backend/products#list_reading_tasks"
+# - "backend/products#list_readings"
 # - "backend/products#new"
 # - "backend/products#picture"
 # - "backend/products#show"
@@ -707,13 +707,13 @@
 # - "backend/settlements#list_carrier_linkages"
 # - "backend/settlements#list_contained_products"
 # - "backend/settlements#list_groups"
-# - "backend/settlements#list_indicators"
 # - "backend/settlements#list_intervention_casts"
 # - "backend/settlements#list_issues"
 # - "backend/settlements#list_markers"
 # - "backend/settlements#list_members"
 # - "backend/settlements#list_places"
 # - "backend/settlements#list_reading_tasks"
+# - "backend/settlements#list_readings"
 # - "backend/settlements#new"
 # - "backend/settlements#picture"
 # - "backend/settlements#show"
@@ -736,13 +736,13 @@
 # - "backend/workers#list_carrier_linkages"
 # - "backend/workers#list_contained_products"
 # - "backend/workers#list_groups"
-# - "backend/workers#list_indicators"
 # - "backend/workers#list_intervention_casts"
 # - "backend/workers#list_issues"
 # - "backend/workers#list_markers"
 # - "backend/workers#list_members"
 # - "backend/workers#list_places"
 # - "backend/workers#list_reading_tasks"
+# - "backend/workers#list_readings"
 # - "backend/workers#new"
 # - "backend/workers#picture"
 # - "backend/workers#show"
