add analysis management (in progress)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -19,6 +19,24 @@
 # - "backend/affairs#show"
 # - "backend/aggregators#index"
 # - "backend/aggregators#show"
+# - "backend/analyses#create"
+# - "backend/analyses#destroy"
+# - "backend/analyses#edit"
+# - "backend/analyses#index"
+# - "backend/analyses#list"
+# - "backend/analyses#new"
+# - "backend/analyses#show"
+# - "backend/analyses#unroll"
+# - "backend/analyses#update"
+# - "backend/analysis_items#create"
+# - "backend/analysis_items#destroy"
+# - "backend/analysis_items#edit"
+# - "backend/analysis_items#index"
+# - "backend/analysis_items#list"
+# - "backend/analysis_items#new"
+# - "backend/analysis_items#show"
+# - "backend/analysis_items#unroll"
+# - "backend/analysis_items#update"
 # - "backend/analytic_distributions#create"
 # - "backend/analytic_distributions#destroy"
 # - "backend/analytic_distributions#edit"
