--- a/db/tables.yml
+++ b/db/tables.yml
@@ -75,12 +75,14 @@ analyses:
   analyser_id: {type: integer, references: entity}
   created_at: {type: datetime, required: true}
   creator_id: {type: integer, references: user}
-  description: {type: string}
+  description: {type: text}
   geolocation: {type: spatial}
   id: {type: integer, required: true}
   lock_version: {type: integer, required: true, default: 0}
   made_at: {type: datetime}
+  number: {type: string, required: true}
   product_id: {type: integer, references: product}
+  reference_number: {type: string}
   sampled_at: {type: datetime, required: true}
   sampler_id: {type: integer, references: entity}
   updated_at: {type: datetime, required: true}
@@ -90,12 +92,12 @@ analysis_items:
   absolute_measure_value_unit: {type: string}
   absolute_measure_value_value: {type: decimal, precision: 19, scale: 4}
   analysis_id: {type: integer, references: analysis, required: true}
+  annotation: {type: text}
   boolean_value: {type: boolean, required: true, default: false}
   choice_value: {type: string}
   created_at: {type: datetime, required: true}
   creator_id: {type: integer, references: user}
   decimal_value: {type: decimal, precision: 19, scale: 4}
-  description: {type: string}
   geometry_value: {type: spatial}
   id: {type: integer, required: true}
   indicator_datatype: {type: string, required: true}
@@ -370,10 +372,10 @@ entities:
   last_name: {type: string, required: true}
   lock_version: {type: integer, required: true, default: 0}
   locked: {type: boolean, required: true, default: false}
+  meeting_origin: {type: string}
   nature: {type: string, required: true}
   number: {type: string, limit: 60}
   of_company: {type: boolean, required: true, default: false}
-  origin: {type: string}
   picture_content_type: {type: string}
   picture_file_name: {type: string}
   picture_file_size: {type: integer}
