--- a/test/fixtures/analyses.yml
+++ b/test/fixtures/analyses.yml
@@ -21,32 +21,45 @@
 #
 # == Table: analyses
 #
-#  analyser_id  :integer
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :string(255)
-#  geolocation  :spatial({:srid=>
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  made_at      :datetime
-#  product_id   :integer
-#  sampled_at   :datetime         not null
-#  sampler_id   :integer
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  analyser_id      :integer
+#  created_at       :datetime         not null
+#  creator_id       :integer
+#  description      :text
+#  geolocation      :spatial({:srid=>
+#  id               :integer          not null, primary key
+#  lock_version     :integer          default(0), not null
+#  made_at          :datetime
+#  number           :string(255)      not null
+#  product_id       :integer
+#  reference_number :string(255)
+#  sampled_at       :datetime         not null
+#  sampler_id       :integer
+#  updated_at       :datetime         not null
+#  updater_id       :integer
 #
 #
 # == Fixture: analyses
 #
 # analyses_001:
 #   creator: users_001
+#   number: "Lorem ipsum"
 #   sampled_at: 2013-10-26 18:34:04 +02:00
 #   updater: users_001
 #
+
 analyses_001:
   creator: users_001
+  geolocation: "SRID=4326;POINT(45.5000 -0.79292768)"
+  number: "ANL0001"
+  reference_number: "LCALEDSLAB8458964548458"
   sampled_at: 2013-10-26 18:34:04 +02:00
   updater: users_001
+
+analyses_002:
+  creator: users_001
   geolocation: "SRID=4326;POINT(45.5000 -0.79292768)"
+  number: "ANL0002"
+  sampled_at: 2013-10-26 18:34:04 +02:00
+  updater: users_001
 
 
