Begins to introduce Handlers for new Variable in interventions

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -24,6 +24,7 @@
 # - "backend/analyses#edit"
 # - "backend/analyses#index"
 # - "backend/analyses#list"
+# - "backend/analyses#list_items"
 # - "backend/analyses#new"
 # - "backend/analyses#show"
 # - "backend/analyses#unroll"
