Reverse intervention computations

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -300,6 +300,7 @@
 # - "backend/interfacers#toggle_view_mode"
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
+# - "backend/interventions#compute"
 # - "backend/inventories#unroll"
 # - "backend/issues#abort"
 # - "backend/issues#close"
