--- a/test/fixtures/analyses.yml
+++ b/test/fixtures/analyses.yml
@@ -21,6 +21,7 @@
 #
 # == Table: analyses
 #
+#  analysed_at      :datetime
 #  analyser_id      :integer
 #  created_at       :datetime         not null
 #  creator_id       :integer
@@ -28,7 +29,6 @@
 #  geolocation      :spatial({:srid=>
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
-#  made_at          :datetime
 #  nature           :string(255)      not null
 #  number           :string(255)      not null
 #  product_id       :integer
@@ -50,16 +50,20 @@
 #
 
 analyses_001:
+  analysed_at: 2013-10-27 18:34:04 +02:00
   creator: users_001
   geolocation: "SRID=4326;POINT(45.5000 -0.79292768)"
+  nature: cow_milk_analysis
   number: "ANL0001"
   reference_number: "LCALEDSLAB8458964548458"
   sampled_at: 2013-10-26 18:34:04 +02:00
   updater: users_001
 
 analyses_002:
+  analysed_at: 2013-10-27 18:34:04 +02:00
   creator: users_001
   geolocation: "SRID=4326;POINT(45.5000 -0.79292768)"
+  nature: cow_milk_analysis
   number: "ANL0002"
   sampled_at: 2013-10-26 18:34:04 +02:00
   updater: users_001
