--- a/test/fixtures/analysis_items.yml
+++ b/test/fixtures/analysis_items.yml
@@ -39,7 +39,6 @@
 #  measure_value_unit           :string(255)
 #  measure_value_value          :decimal(19, 4)
 #  point_value                  :spatial({:srid=>
-#  read_at                      :datetime         not null
 #  string_value                 :text
 #  updated_at                   :datetime         not null
 #  updater_id                   :integer
@@ -53,10 +52,19 @@
 #   creator: users_001
 #   indicator_datatype: "Lorem ipsum"
 #   indicator_name: "Lorem ipsum"
-#   read_at: 2013-10-26 18:34:04 +02:00
 #   updater: users_001
 #
+
 analysis_items_001:
+  analysis: analyses_001
+  creator: users_001
+  indicator_datatype: "measure"
+  indicator_name: "nitrogen_concentration"
+  measure_value_unit: "percent"
+  measure_value_value: "33.33"
+  updater: users_001
+
+analysis_items_002:
   analysis: analyses_001
   creator: users_001
   indicator_datatype: "measure"
