--- a/test/fixtures/interventions.yml
+++ b/test/fixtures/interventions.yml
@@ -56,23 +56,24 @@
 #   state: "Lorem ipsum"
 #   updater: users_001
 #
----
+
 interventions_001:
   creator: users_001
   natures: grinding, soil_enrichment
   production: productions_001
   provisional: false
-  reference_name: ':plant_grinding-0.0'
+  reference_name: 'base-plant_grinding-0'
   started_at: 2009-05-03 09:13:59.000000000 +02:00
   state: undone
   stopped_at: 2009-05-03 12:17:23.000000000 +02:00
   updater: users_001
+
 interventions_002:
   creator: users_001
   natures: grinding, soil_enrichment
   production: productions_001
   provisional: false
-  reference_name: ':plant_grinding-0.0'
+  reference_name: 'base-plant_grinding-0'
   started_at: 2009-06-03 09:13:59.000000000 +02:00
   state: done
   stopped_at: 2009-06-03 12:17:23.000000000 +02:00
