--- a/db/tables.yml
+++ b/db/tables.yml
@@ -734,6 +734,7 @@ intervention_casts:
   intervention_id: {type: integer, references: intervention, required: true}
   lock_version: {type: integer, required: true, default: 0}
   population: {type: decimal, precision: 19, scale: 4}
+  position: {type: integer, required: true}
   reference_name: {type: string, required: true}
   roles: {type: string, limit: 320}
   shape: {type: spatial}
