--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 
 # Ignore the default first run files
 /db/first_runs/default
-/db/first_runs/demo_gaecmilkjug
-/db/first_runs/demo_gaecjoulin
-/db/first_runs/demo_ph64
+/db/first_runs/gaecmilkjug
+/db/first_runs/gaecjoulin
+/db/first_runs/ph64
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
